--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/highlight/styles.css" media="all" />
     <link rel="stylesheet" href="./assets/styles.css" media="all" />
-    <link rel="stylesheet" href="./src/Snaplayer.css" />
+    <link rel="stylesheet" href="./src/snaplayer.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body>
